lintian-brush (0.36) UNRELEASED; urgency=medium

  * debian-control-has-unusual-field-spacing: don't update files with
    unknown template types.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 12 Oct 2019 20:27:32 +0000

lintian-brush (0.35) unstable; urgency=medium

  * Fix handling of dictionaries for the 'repository' field in META.yml.
  * debian-control-has-obsolete-dbg-package: Don't bump debhelper
    version unless there are -dbg packages.
  * Add fixer debhelper-compat-wrong-field.
  * Support updating templated debian/control files that use cdbs
    template.
  * Cope with warnings from dch that require confirmation. Closes:
    #941767
  * unused-build-dependency-on-cdbs: Don't error out if there is no
    Build-Depends field.
  * debian-rules-uses-unnecessary-dh-argument: Cope with non-debhelper
    packages.
  * Cope with comments in debian/compat.
  * maintainer-also-in-uploaders: Support removing only item in the
    list.
  * Add build-dependency on devscripts, for dch tests.
  * debian-watch-file-is-missing: fall back to running setup with
    python2 if python3 does not work.
  * Add fixer copyright-continued-lines-with-space.
  * Ignore symlinks when updating service files.
  * debian-control-has-obsolete-dbg-package: support --dbg-package
    arguments in dh lines.
  * out-of-date-standards-version: don't update standards version if
    none is set.
  * package.json: bugs field can be a dict.
  * upstream-metadata: Don't fail when META.yml file fails to parse.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 12 Oct 2019 19:59:21 +0000

lintian-brush (0.34) unstable; urgency=medium

  * Add support for renamed tag: rules-requires-root-implicitly -> rules-
    requires-root-missing.
  * unused-license-paragraph-in-dep5-copyright: Ignore
    NotMatchineReadableError.
  * vcs-field-bitrotted: don't include URLs that vcswatch reports as
    errorring.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 04 Oct 2019 02:02:36 +0000
