@@ -2,6 +2,7 @@ lintian-brush (0.36) UNRELEASED; urgency=medium
 
   * debian-control-has-unusual-field-spacing: don't update files with
     unknown template types.
+  * Support parsing some more format salsa URLs.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 12 Oct 2019 20:27:32 +0000
 
